--- a/Werkstatt/Diary/2025-12-01.md
+++ b/Werkstatt/Diary/2025-12-01.md
@@ -9,6 +9,9 @@ author: Ueberphilosophy
 - Veröffentliche html output auf github.io
 - Sichere Quellen auf github
 - Baue um, so dass alle Autoren aller Bereiche in einem Verzeichnis sind
- - [[Alte Geschichte Videos#Grundkurs alte Geschichte Uni Oldenburg]] Einführung, nochmal den ersten Teil mit dem Überblick über die Phasen.
+- [[Alte Geschichte Videos#Grundkurs alte Geschichte Uni Oldenburg]] Einführung, nochmal den ersten Teil mit dem Überblick über die Phasen.
+- [[Alte Geschichte Videos#Grundkurs alte Geschichte Uni Oldenburg]] Teil zwei Neolithikum und Entstehung der Städte ,den zweiten Teil noch nicht 
+- [[Homer Quellen#Illias|Illias]] zweiter Gesang, erste Hälfte (hauptsächlich gehört) bis 5:48
+- über [[Hexameter]] gelesen
 
 &#9668;[[2025-11-30]]- [[2025-12-02]]&#9658;
