baue Verzeichniskataloge um

--- a/Werkstatt/Diary/2025/November/2025-11-27.md
+++ b/Werkstatt/Diary/2025/November/2025-11-27.md
@@ -7,6 +7,6 @@ author: Ueberphilosophy
 
 # 2025-11-27
 - [[Hoyningen Einführung in die theoretische Philosophie]] 3. Vorlesung, 1. Teil
-- [[Adamson Thales]]
+- [[Adamson  001 Thales]]
 
 &#9668;[[2025-11-26]] - [[2025-11-28]]&#9658;
