--- a/Werkstatt/Diary/2025/November/2025-11-28.md
+++ b/Werkstatt/Diary/2025/November/2025-11-28.md
@@ -7,7 +7,7 @@ author: Ueberphilosophy
 # 2025-11-28
 - [[timeline]] eingerichtet
 - [[Hoyningen Einführung in die theoretische Philosophie]] 3.Vorlesung 2. Teil
-- [[Adamson Thales]] nochmal, und nachgelesen (Besitze das erste Buch)
+- [[Adamson  001 Thales]] nochmal, und nachgelesen (Besitze das erste Buch)
 
 
 &#9668;[[2025-11-27]]- [[2025-11-29]]&#9658;
