Fahre mit dem Katalogisieren fort

--- a/Werkstatt/Diary/2025-12-03.md
+++ b/Werkstatt/Diary/2025-12-03.md
@@ -11,6 +11,9 @@ author: Ueberphilosophy
 - Verzeichnisse von Jahren und Monaten ins Diary
 - [[Alte Geschichte Videos#Antike im Zerrspiegel politischer Ideologien]], Vorlesung 1 - [[Antike im Zerrspiegel politischer Ideologien|Notizen dazu]]
 - Lese/Höre [Anfänge](https://www.klett-cotta.de/produkt/anfaenge-9783608985085-t-72) (gekauft) von Graeber/Wengrow. [[Anfaenge Graeber Wengrow| Notizen dazu]], Kapitel 1
+- Passe für github.io an, das mag keine leading underscores
+- [[Homer Quellen#Illias|Ilias]] zweiter Gesang,  zweite Hälfte (hauptsächlich gehört) 
+- 
 
 
 ## Es war einmal Mesopotamien
@@ -34,9 +37,9 @@ Das waren die Assyrer. In den Anfängen der Archäologie entdeckte man dann eine
 
 In Nippur fand man eine alte sumerische Version der Sintflut. Weil die Menschen den Göttern nicht mehr dienen wollten beschloss Enli sie durch eine Sintflut auszulöschen. Entli verriet das Geheimnis und warnte den Helden. Als die Wasser zurückgegangen waren lud dieser die Götter zu einem Festmahl auf dem Berggipfel ein. Zum Dank schenkte E. ihm und seiner Frau den Odem der Unsterblichkeit. 
 
-1917(?) entdeckte man Uruk. Ihre Göttin war Inana. 
+1917(?) entdeckte man Uruk. Ihre Göttin war Inanna. 
 
-> Wann wird mein zerstörter Tempel wieder erstehen? Ich bin die heilige Inana, die Geliebte des Himmels. Uruk meine Stadt wurde für mich in meinen Träumen erbaut. Mein Tempel war die Kultstätte der Menschheit. Sein Tor war ein wundertätiger Ort. Als er erbaut wurde war es ein blühendes Land. Als man ihn zerstörte wurde auch das Land zerstört. 
+> Wann wird mein zerstörter Tempel wieder erstehen? Ich bin die heilige Inanna, die Geliebte des Himmels. Uruk meine Stadt wurde für mich in meinen Träumen erbaut. Mein Tempel war die Kultstätte der Menschheit. Sein Tor war ein wundertätiger Ort. Als er erbaut wurde war es ein blühendes Land. Als man ihn zerstörte wurde auch das Land zerstört. 
 
 In Uruk fand man die ältesten Schriftdokumente der Welt. Vermutlich wurde hier vor mehr als 5000 Jahren die Schrift erfunden. Zuerst ging es um Buchhaltung. Die Sumerer verwendeten über mehrere Jahrhunderte hinweg ca 1000 Zeichen. Später wurde die Schrift gesprochenen Lauten zugeordnet, so dass nun auch die Möglichkeit bestand, das gesprochene Wort schriftlich fest zu halten. Wie in einem Bilderrätsel stand jedes Zeichen für ein Wort oder einen Laut. Die Schrift wurde nun vereinfacht und etwa ab Ende des 3. Jtd vermochte sie den gesamten Reichtum der Sprache auszudrücken. In graphischer Hinsicht wurde die Schrift stilisiert. Statt mit einer Spitze Linien zu ziehen verwendete man nun einen abgeschrägten Griffel aus Schilfrohr (in Tontafeln). Die geschwungenen Linien wurden in keilförmige Segmente unterteilt. Die abstrakte Keilschrift hatte sich nun völlig von den Bildsymbolen ihrer Anfänge gelöst. 
 
@@ -44,7 +47,7 @@ Der erste bedeutende Text der in Schriftform überliefert wurde war das Gilgames
 
 > Die Freundschaft mehrt unsere Kräfte. Und jeder von uns wird den anderen verteidigen. Zwei junge Löwen sind stärker als ihr Vater. 
 
-Aus Zorn über die Anmaßung der beiden jungen Freunde belegte die Göttin Inana Enkido mit einer tödlichen Krankheit. 
+Aus Zorn über die Anmaßung der beiden jungen Freunde belegte die Göttin Inanna Enkido mit einer tödlichen Krankheit. 
 
 > Mein Freund Enkido ist wieder zu Erde geworden. Der Schrecken fuhr mir in die Glieder und voller Angst vor dem Tod durchstreifte ich die Steppe. 
 
