--- a/Werkstatt/Diary/2025-12-05.md
+++ b/Werkstatt/Diary/2025-12-05.md
@@ -8,7 +8,12 @@ author: Ueberphilosophy
 # 2025-12-05
 - mäßig krank (die Tage vorher nur leicht)
 - die #Jesuitenberichte in der Werkstatt aufgelistet und zu pdfs verlinkt
-- [Anfänge](https://www.klett-cotta.de/produkt/anfaenge-9783608985085-t-72) (gekauft) von Graeber/Wengrow. [[Anfaenge Graeber Wengrow| noch keine Notizen dazu]], Kapitel 2 angefangen gründlich zu lesen
+- [Anfänge](https://www.klett-cotta.de/produkt/anfaenge-9783608985085-t-72) (gekauft) von Graeber/Wengrow, Kapitel 2 angefangen gründlich zu lesen [[02 Sündhafte Freiheit|Notizen dazu]]
 - [[Alte Geschichte Audios#Von Assur nach Babylon - Uni Leipzig]] "Das Gilgamesch Epos", "Wie klang babylonisch", "Anfänge des Schreibens"
  - [Die Ilias - der Krieg um Troja](https://www.youtube.com/watch?v=3k6x6RL-zdA) ein Stückchen weiter (Hinter die Opferung Iphigenies)
+ - [Grundkurs alte Geschichte Vom Neolithikum bis zur Eisenzeit](https://www.youtube.com/watch?v=mI8QwUjx6Y4&list=PLeF3wmU54t4SpUVn0xQjprLXzo4nZ89pP&index=4)  zuende [[Uni Oldenburg Grundkurs alte Geschichte|Notizen dazu]]
+ - [[Hoyningen Einführung in die theoretische Philosophie]] 4.Vorlesung 2. Teil
+- [[Alte Geschichte Videos#Antike im Zerrspiegel politischer Ideologien]], Vorlesung 2 - [[Antike im Zerrspiegel politischer Ideologien#Vorlesung 2|Notizen dazu]]
+- [[Alte Geschichte Videos#Antike im Zerrspiegel politischer Ideologien]], Vorlesung 3 - [[Antike im Zerrspiegel politischer Ideologien#Vorlesung 3|Notizen dazu]] nur Anfang
+
 &#9668;[[2025-12-04]]- [[2025-12-06]]&#9658;
