entferne alle Links von Materialien zu Werkstatt

--- a/Werkstatt/Diary/2025-12-06.md
+++ b/Werkstatt/Diary/2025-12-06.md
@@ -10,4 +10,4 @@ author: Ueberphilosophy
 - [[Alte Geschichte Audios#Von Assur nach Babylon - Uni Leipzig|Von Assur nach Babylon]]:  [Anfänge des Schreibens](https://wissenschaftspodcasts.de/podcasts/von-assur-nach-babylon/anfaenge-des-schreibens_9484353/), [Wie klang Babylonisch?](https://wissenschaftspodcasts.de/podcasts/von-assur-nach-babylon/wie-klang-babylonisch-9777304/) (bis 22:00) - Höre die beiden nochmal und [[Uni Leipzig Von Assur nach Babylon|Notizen]] dazu
 - [[Alte Geschichte Videos#Antike im Zerrspiegel politischer Ideologien]], Vorlesung 3 - [[Antike im Zerrspiegel politischer Ideologien#Vorlesung 3|Notizen dazu]] 
 
-&#9668;[[2025-12-05]]- [[2025-12-07]]&#9658;
+&#9668;[[2025-12-05]]- [[Werkstatt/Diary/2025-12-07]]&#9658;
