baue Verzeichnisstruktur um

--- a/Werkstatt/Diary/2025-12-14.md
+++ b/Werkstatt/Diary/2025-12-14.md
@@ -1,37 +1,56 @@
 ---
 cssclasses: diary
 date_created: 2025-12-14
-publish: true
+publish: false
 tags:
 author: Ueberphilosophy
 ---
 # 2025-12-14
 ## Wie mappe ich stutiis und Werkstatt
-Vorlesung verlinkt auf Notizen
+Werkstatt soll nicht auf der Site veröffentlicht werden, aber auf localhost möchte ich es haben.
+## Wie es läuft
+### In Obsidian
+#### Privat
+mit Script .makepriv
+##### Aus Public
+- .ispub wird gelöscht
+- stutiis (was Werkstatt war) wird zu .stutiis
+- .Werkstatt wird zu Werkstatt
+- in foty.js werden in foldertype werkstatt public auskommentiert und private ein
+- damit wird die cssclass for neue Werkstatt Einträge `studies`
+- .ispriv wird erzeugt
+##### Aus Export
+- .isexport wird gelöscht
+- XXXXstutiis wird zu .stutiis
+- .ispriv wird erzeugt
+#### Öffentlich
+mit Script .domakepub
+- .ispriv wird gelöscht
+- Werkstatt wird zu .Werkstatt
+- .stutiis wird zu Werkstatt
+- in foty.js werden in foldertype werkstatt private auskommentiert und public ein
+- damit wird die cssclass for neue Werkstatt Einträge `werkstatt`
+- .ispub wird erzeugt
+#### Exportieren und einchecken
+mit Script .prepareforexport
+- .ispriv wird gelöscht (Das Script funktioniert nur wenn Privat)
+- .stutiis wird zu XXXstutiis
+- .isexport wird erzeugt
+### Export
+- In Projekte/Schule: Mit .prepareforexport Obsidian in Export Modus schalten. 
+- in schoolout .makepriv aufrufen
+- Aus Obsidian exportieren, Obsidian dabei im Vordergrund lassen
+- in schoolout .domakepub aufrufen
+- in schoolout git add, git commit, git push
+- in schoolout .makepriv aufrufen
+- In Projekte/Schule: Mit .makepriv den Exportmodus aufheben
+### Quellen einchecken
+- Projekte/Schule muß im Export Modus sein
+- in Projekte/Schule git add, git commit, git push
+### Anzeige
+Die Notes in .stutiis/Mitschriften erhalten cssclasses `studies`, die Notes in .Werkstatt/Mitschrifftten erhalten cssclasses `werkstatt`. `studies` zeigt eine bunten Rand an, `werkstatt` einen grauen. Ausserdem zeigt `Werkstatt` im Anzeigemodus auf dem oberen Drittel ein Wasserzeichen "Privat".
 
-Die Notizen sind doppelt vorhanden, einmal in stutiis und einmal in Werkstatt
-
-Nach dem Export muß der Link auf Werkstatt gehen, aber 
-
-vor der Veröffentlichung die Dateien in stutiis anzeigen
-
-und lokal die in Werkstatt
-
-Ich brauche also wie schon vorhanden ein leeres sauberes stutiis
-
-Vor der Veröffentlichung enthält file-tree-content.html weniger Dateien als danach.
 
 
-
-Jetzt lösche ich einfach Werkstatt vor dem Export, und füge es nachher wieder ein. Es gehen keine Links nach Werkstatt.
-
-Ich möchte aber die Links haben.
-
-Ich   muss zweimal exportieren
-
-Oder ich linke explizit nach stutiis, fahre fort wie bisher (also alles exportieren, Werkstatt löschen, pushen, Werkstatt wieder reinkopieren) und ersetzte dann stutiis/Notes durch Werkstatt/Notizen
-
-
-
-&#9668;[[2025-12-13]]- [[2025-12-15]]&#9658;
+&#9668;[[2025-12-13]]- [[2025-12-14]]&#9658;
 ## -footnotes
