erstelle dataviejs catalog script

--- a/Werkstatt/Diary/2025-12-03.md
+++ b/Werkstatt/Diary/2025-12-03.md
@@ -10,7 +10,7 @@ author: Ueberphilosophy
 - Baue Materialienkatalog um, so dass jedes Unterverzeichnis eigenen Katalog hält
 - Verzeichnisse von Jahren und Monaten ins Diary
 - [[Alte Geschichte Videos#Antike im Zerrspiegel politischer Ideologien]], Vorlesung 1 - [[Antike im Zerrspiegel politischer Ideologien|Notizen dazu]]
-- Lese/Höre [Anfänge](https://www.klett-cotta.de/produkt/anfaenge-9783608985085-t-72) (gekauft) von Graeber/Wengrow. [[Anfaenge Graeber Wengrow| Notizen dazu]], Kapitel 1
+- Lese/Höre [Anfänge](https://www.klett-cotta.de/produkt/anfaenge-9783608985085-t-72) (gekauft) von Graeber/Wengrow. [[-Anfaenge Graeber Wengrow| Notizen dazu]], Kapitel 1
 - Passe für github.io an, das mag keine leading underscores
 - [[Homer Quellen#Illias|Ilias]] zweiter Gesang,  zweite Hälfte (hauptsächlich gehört) 
 - 
