--- a/Werkstatt/Diary/2025-12-04.md
+++ b/Werkstatt/Diary/2025-12-04.md
@@ -8,7 +8,7 @@ author: Ueberphilosophy
 # 2025-12-04
 - geschachteltes Tag speaker zu allen Vorlesungen hinzugefügt
 - Die Links der LMU Casts für die Ringvorlesungen Einführung Philosophie korrigiert
-- Höre [Anfänge](https://www.klett-cotta.de/produkt/anfaenge-9783608985085-t-72) (gekauft) von Graeber/Wengrow. [[Anfaenge Graeber Wengrow| noch keine Notizen dazu]], Kapitel 2, werde ich nochmal hören/lesen
+- Höre [Anfänge](https://www.klett-cotta.de/produkt/anfaenge-9783608985085-t-72) (gekauft) von Graeber/Wengrow. [[-Anfaenge Graeber Wengrow| noch keine Notizen dazu]], Kapitel 2, werde ich nochmal hören/lesen
 - Finkeldes Videos alle katalogisiert
 - Einige Kataloge auf der Hauptseite aufgelistet
 - Einige Podcasts aus diesen Katalogen katalogisiert
