--- a/Werkstatt/Diary/2025-12-06.md
+++ b/Werkstatt/Diary/2025-12-06.md
@@ -7,7 +7,7 @@ author: Ueberphilosophy
 ---
 # 2025-12-06
 
-- [[Alte Geschichte Audios#Von Assur nach Babylon - Uni Leipzig|Von Assur nach Babylon]]:  [Anfänge des Schreibens](https://wissenschaftspodcasts.de/podcasts/von-assur-nach-babylon/anfaenge-des-schreibens_9484353/), [Wie klang Babylonisch?](https://wissenschaftspodcasts.de/podcasts/von-assur-nach-babylon/wie-klang-babylonisch-9777304/) (bis 22:00) - Höre die beiden nochmal und [[Uni Leipzig Von Assur nach Babylon|Notizen]] dazu
+- [[Von_Assur_nach_Babylon_UniLeipzig#Von Assur nach Babylon - Uni Leipzig|Von Assur nach Babylon]]:  [Anfänge des Schreibens](https://wissenschaftspodcasts.de/podcasts/von-assur-nach-babylon/anfaenge-des-schreibens_9484353/), [Wie klang Babylonisch?](https://wissenschaftspodcasts.de/podcasts/von-assur-nach-babylon/wie-klang-babylonisch-9777304/) (bis 22:00) - Höre die beiden nochmal und [[Uni Leipzig Von Assur nach Babylon|Notizen]] dazu
 - [[Alte Geschichte Videos#Antike im Zerrspiegel politischer Ideologien]], Vorlesung 3 - [[Antike im Zerrspiegel politischer Ideologien#Vorlesung 3|Notizen dazu]] 
 
 
