--- a/Werkstatt/Diary/2025/November/2025-11-30.md
+++ b/Werkstatt/Diary/2025/November/2025-11-30.md
@@ -6,11 +6,11 @@ tags:
 author: Ueberphilosophy
 ---
 # 2025-11-30
- - [[Homer Materialen#Arte Die Illias und die Odyssee|Arte - die Ilias und die Odyssee]] 1.) Der Apfel der Zwietracht
+ - [[Die_Ilias_und_die_Odyssee_Arte#Arte Die Illias und die Odyssee|Arte - die Ilias und die Odyssee]] 1.) Der Apfel der Zwietracht
  - [Die Ilias - der Krieg um Troja](https://www.youtube.com/watch?v=3k6x6RL-zdA) bis 20:52
  - [[Alte Geschichte Videos#Grundkurs alte Geschichte Uni Oldenburg]] Einführung
  - [[Hoyningen Einführung in die theoretische Philosophie]] 4.Vorlesung 1. Teil
- - [[Homer Materialen#Arte Die Illias und die Odyssee|Arte - die Ilias und die Odyssee]] 2.) Die Stunde der Opfer
+ - [[Die_Ilias_und_die_Odyssee_Arte#Arte Die Illias und die Odyssee|Arte - die Ilias und die Odyssee]] 2.) Die Stunde der Opfer
 - [[Buchheim Antike Philosophie 2017]] - zweite Vorlesung bis 0:15
 
 
