korrigiere css für den Export

--- a/Werkstatt/Diary/2025-12-01.md
+++ b/Werkstatt/Diary/2025-12-01.md
@@ -9,8 +9,8 @@ author: Ueberphilosophy
 - Veröffentliche html output auf github.io
 - Sichere Quellen auf github
 - Baue um, so dass alle Autoren aller Bereiche in einem Verzeichnis sind
-- [[Alte Geschichte Videos#Grundkurs alte Geschichte Uni Oldenburg]] Einführung, nochmal den ersten Teil mit dem Überblick über die Phasen.
-- [[Alte Geschichte Videos#Grundkurs alte Geschichte Uni Oldenburg]] Teil zwei Neolithikum und Entstehung der Städte ,den zweiten Teil noch nicht 
+- [[Grundkurs_alte_Geschichte_UniOldenburg]] Einführung, nochmal den ersten Teil mit dem Überblick über die Phasen.
+- [[Grundkurs_alte_Geschichte_UniOldenburg]] Teil zwei Neolithikum und Entstehung der Städte ,den zweiten Teil noch nicht 
 - [[Homer Quellen#Illias|Illias]] zweiter Gesang, erste Hälfte (hauptsächlich gehört) bis 5:48
 - über [[Hexameter]] gelesen
 
