--- a/Werkstatt/Diary/2025-12-02.md
+++ b/Werkstatt/Diary/2025-12-02.md
@@ -8,7 +8,7 @@ author: Ueberphilosophy
 # 2025-12-02
 - Die Autorenverzeichnisse entfernt
 - [[Homer Quellen#Illias|Ilias]] zweiter Gesang, erste Hälfte (hauptsächlich gehört) 
-- [[Buchheim Antike Philosophie 2017]] - zweite Vorlesung Heraklit, ab 0:15 bis 1:06
+- [[Stationen_Paradigmen_antike_Philosophie_2017_LMUMuenchen_Buchheim]] - zweite Vorlesung Heraklit, ab 0:15 bis 1:06
 - [[Werkstatt/Mitschriften/Adamson/Adamson 002 Anaximander und Anaximenes]]
 -  [Vom Euphrat kommt, was wir sind](https://www.youtube.com/watch?v=6nCb_IrS3ms) - [[2025-12-02#Vom Euphrat kommt, was wir sind|Notizen]]
 - [Die gesamte Geschichte Mesopotamiens zum Einschlafen](https://www.youtube.com/watch?v=fQnHwB6xD_E) - [[2025-12-02#Die gesamte Geschichte Mesopotamiens zum Einschlafen|Notizen]]
