--- a/Werkstatt/Diary/2025-12-03.md
+++ b/Werkstatt/Diary/2025-12-03.md
@@ -9,7 +9,7 @@ author: Ueberphilosophy
 - [Es war einmal Mesopotamien (Arte 1998)](https://www.youtube.com/watch?v=7b8h3FLDdXQ) - [[2025-12-03#Es war einmal Mesopotamien|Notizen]]
 - Baue Materialienkatalog um, so dass jedes Unterverzeichnis eigenen Katalog hält
 - Verzeichnisse von Jahren und Monaten ins Diary
-- [[Alte Geschichte Videos#Antike im Zerrspiegel politischer Ideologien]], Vorlesung 1 - [[Antike im Zerrspiegel politischer Ideologien|Notizen dazu]]
+- [[Antike_im_Zerrspiegel_politischer_Ideologien]], Vorlesung 1 - [[Werkstatt/Mitschriften/@Antike_im_Zerrspiegel_politischer_Ideologien|Notizen dazu]]
 - Lese/Höre [Anfänge](https://www.klett-cotta.de/produkt/anfaenge-9783608985085-t-72) (gekauft) von Graeber/Wengrow. [[-Anfaenge Graeber Wengrow| Notizen dazu]], Kapitel 1
 - Passe für github.io an, das mag keine leading underscores
 - [[Homer Quellen#Illias|Ilias]] zweiter Gesang,  zweite Hälfte (hauptsächlich gehört) 
