--- a/Werkstatt/Diary/2025-12-06.md
+++ b/Werkstatt/Diary/2025-12-06.md
@@ -7,8 +7,8 @@ author: Ueberphilosophy
 ---
 # 2025-12-06
 
-- [[Von_Assur_nach_Babylon_UniLeipzig#Von Assur nach Babylon - Uni Leipzig|Von Assur nach Babylon]]:  [Anfänge des Schreibens](https://wissenschaftspodcasts.de/podcasts/von-assur-nach-babylon/anfaenge-des-schreibens_9484353/), [Wie klang Babylonisch?](https://wissenschaftspodcasts.de/podcasts/von-assur-nach-babylon/wie-klang-babylonisch-9777304/) (bis 22:00) - Höre die beiden nochmal und [[Uni Leipzig Von Assur nach Babylon|Notizen]] dazu
-- [[Alte Geschichte Videos#Antike im Zerrspiegel politischer Ideologien]], Vorlesung 3 - [[Antike im Zerrspiegel politischer Ideologien#Vorlesung 3|Notizen dazu]] 
+- [[Von_Assur_nach_Babylon_UniLeipzig]]:  [Anfänge des Schreibens](https://wissenschaftspodcasts.de/podcasts/von-assur-nach-babylon/anfaenge-des-schreibens_9484353/), [Wie klang Babylonisch?](https://wissenschaftspodcasts.de/podcasts/von-assur-nach-babylon/wie-klang-babylonisch-9777304/) (bis 22:00) - Höre die beiden nochmal und [[Werkstatt/Mitschriften/@Von_Assur_nach_Babylon_UniLeipzig|@Von_Assur_nach_Babylon_UniLeibzig|Notizen]] dazu
+- [[Antike_im_Zerrspiegel_politischer_Ideologien]], Vorlesung 3 - [[Werkstatt/Mitschriften/@Antike_im_Zerrspiegel_politischer_Ideologien#Vorlesung 3|@Antike_im_Zerrspiegel_politischer_Ideologien]] 
 
 
 &#9668;[[2025-12-05]]- [[Werkstatt/Diary/2025-12-12]]&#9658;
