--- a/Werkstatt/Diary/2025/November/2025-11-24.md
+++ b/Werkstatt/Diary/2025/November/2025-11-24.md
@@ -5,7 +5,7 @@ publish: false
 author: Ueberphilosophy
 ---
 # 2025-11-24
-- [[Gil Einführung in die Philosophie]]
+- [[Einfuehrung_Philosophie_2020_TU_Berlin_Gil]]
 
 - [[2025-11-25]]&#9658;
 
