--- a/Werkstatt/Diary/2025/November/2025-11-25.md
+++ b/Werkstatt/Diary/2025/November/2025-11-25.md
@@ -6,7 +6,7 @@ author: Ueberphilosophy
 ---
 # 2025-11-25
 
-[[Hoyningen Einführung in die theoretische Philosophie]] - erste Vorlesung
+[[Einfuehrung_theoretische_Philosophie_2013_UniHannover_Hoyningen]]  - erste Vorlesung
 
 &#9668;[[2025-11-24]] - [[2025-11-26]]&#9658;
 
