--- a/Werkstatt/Diary/2025/November/2025-11-29.md
+++ b/Werkstatt/Diary/2025/November/2025-11-29.md
@@ -7,8 +7,8 @@ author: Ueberphilosophy
 # 2025-11-29
 - tags im Header eingeführt
 - In der [[timeline]] Sterbejahre hinzugefügt
-- Adamsons [[Adamson Antike Philosophie|Vorlesungen über Platons Menon]], die zweite nur halb
-- [[Buchheim Antike Philosophie 2017]] - erste Vorlesung 
+- Adamsons Adamson Antike Philosophie Vorlesungen über Platons Menon, die zweite nur halb ^[2025-17-12: Diese Vorlesung aus der Sammlung durch eine andere, vollständige Version ersetzt]
+- [[Stationen_Paradigmen_antike_Philosophie_2017_LMUMuenchen_Buchheim]] - erste Vorlesung 
 - [[Xenophon Quellen#Apologie|Apologie]] von Xenophon
 - [[Sokrates Quellen#^Edelstein|Xenophontisches und Platonisches Bild des Sokrates]] erstes und zweites Kapitel
 - [[Homer Quellen#Illias|Illias]] ersten Gesang (hauptsächlich gehört)
