--- a/Werkstatt/Diary/2025-12-05.md
+++ b/Werkstatt/Diary/2025-12-05.md
@@ -11,10 +11,10 @@ author: Ueberphilosophy
 - [Anfänge](https://www.klett-cotta.de/produkt/anfaenge-9783608985085-t-72) (gekauft) von Graeber/Wengrow, Kapitel 2 angefangen gründlich zu lesen [[02 Sündhafte Freiheit|Notizen dazu]]
 - [[Von_Assur_nach_Babylon_UniLeipzig#Von Assur nach Babylon - Uni Leipzig]] "Das Gilgamesch Epos", "Wie klang babylonisch", "Anfänge des Schreibens"
  - [Die Ilias - der Krieg um Troja](https://www.youtube.com/watch?v=3k6x6RL-zdA) ein Stückchen weiter (Hinter die Opferung Iphigenies)
- - [Grundkurs alte Geschichte Vom Neolithikum bis zur Eisenzeit](https://www.youtube.com/watch?v=mI8QwUjx6Y4&list=PLeF3wmU54t4SpUVn0xQjprLXzo4nZ89pP&index=4)  zuende [[Uni Oldenburg Grundkurs alte Geschichte|Notizen dazu]]
- - [[Hoyningen Einführung in die theoretische Philosophie]] 4.Vorlesung 2. Teil
-- [[Alte Geschichte Videos#Antike im Zerrspiegel politischer Ideologien]], Vorlesung 2 - [[Antike im Zerrspiegel politischer Ideologien#Vorlesung 2|Notizen dazu]]
-- [[Alte Geschichte Videos#Antike im Zerrspiegel politischer Ideologien]], Vorlesung 3 - [[Antike im Zerrspiegel politischer Ideologien#Vorlesung 3|Notizen dazu]] nur Anfang
+ - [Grundkurs alte Geschichte Vom Neolithikum bis zur Eisenzeit](https://www.youtube.com/watch?v=mI8QwUjx6Y4&list=PLeF3wmU54t4SpUVn0xQjprLXzo4nZ89pP&index=4)  zuende [[Grundkurs_alte_Geschichte_UniOldenburg]]
+ - [[Einfuehrung_theoretische_Philosophie_2013_UniHannover_Hoyningen]] 4.Vorlesung 2. Teil
+- [[Antike_im_Zerrspiegel_politischer_Ideologien]], Vorlesung 2 - [[Werkstatt/Mitschriften/@Antike_im_Zerrspiegel_politischer_Ideologien|Notizen dazu]]
+- [[Antike_im_Zerrspiegel_politischer_Ideologien]], Vorlesung 3 - [[Werkstatt/Mitschriften/@Antike_im_Zerrspiegel_politischer_Ideologien|Notizen dazu]] nur Anfang
 
 
 &#9668;[[2025-12-04]]- [[2025-12-06]]&#9658;
