--- a/Werkstatt/Diary/2025/November/2025-11-26.md
+++ b/Werkstatt/Diary/2025/November/2025-11-26.md
@@ -6,7 +6,7 @@ author: Ueberphilosophy
 ---
 
 # 2025-11-26
-[[Hoyningen Einführung in die theoretische Philosophie]] 2. Vorlesung
+[[Einfuehrung_theoretische_Philosophie_2013_UniHannover_Hoyningen]] 2. Vorlesung
 
 &#9668;[[2025-11-25]] - [[2025-11-27]]&#9658;
 
