--- a/Werkstatt/Diary/2025/November/2025-11-28.md
+++ b/Werkstatt/Diary/2025/November/2025-11-28.md
@@ -6,7 +6,7 @@ author: Ueberphilosophy
 ---
 # 2025-11-28
 - [[timeline]] eingerichtet
-- [[Hoyningen Einführung in die theoretische Philosophie]] 3.Vorlesung 2. Teil
+- [[Einfuehrung_theoretische_Philosophie_2013_UniHannover_Hoyningen]] 3. Vorlesung, 2. Teil
 - [[Adamson 001 Thales]] nochmal, und nachgelesen (Besitze das erste Buch)
 
 
