gib Projekt einen sprechenden Namen

--- a/Werkstatt/Diary/2025-12-14.md
+++ b/Werkstatt/Diary/2025-12-14.md
@@ -40,7 +40,7 @@ mit Script .prepareforexport
 - In Projekte/Schule: Mit .prepareforexport Obsidian in Export Modus schalten. 
 - in schoolout .makepriv aufrufen
 - Aus Obsidian exportieren, Obsidian dabei im Vordergrund lassen
-- Falls schoolout leer war, nochmal exportieren
+- Falls schoolout leer war, manchmal nochmal exportieren
 - in schoolout .domakepub aufrufen
 - in schoolout git add, git commit, git push
 - in schoolout .makepriv aufrufen
