vereinheitliche die Farben

--- a/Werkstatt/Diary/2025-12-22.md
+++ b/Werkstatt/Diary/2025-12-22.md
@@ -11,7 +11,7 @@ author: Ueberphilosophy
 - mitschrift, [[2025-12-22#für mitschrift|Regeln dafür]] __Mitschriften__ (privat, public)
 - stutiismitschrift, [[2025-12-22#für stutiismitschrift|Regeln dafür]] __XXXstutiis/Mitschriften__ (wie mitschrift public)
 - stutiis, [[2025-12-22#für stutiis|Regeln dafür]] __XXXstutiis__ (wie stutiismitschrift, nur kaum Body)
-- material, [[2025-12-22#für material|Regeln dafür]] __Materialien__ (media manuell zu Array korrigieren)
+- material, [[2025-12-22#für material|Regeln dafür]] __Materialien__ (media manuell zu Array korrigieren, foldernotes und catalogs rendern angepasst)
 - autor, [[2025-12-22#für autor|Regeln dafür]] __Autoren__ (tag manuell zu Array korrigieren)
 - diary, [[2025-12-22#für diary|Regeln dafür]] __Diary__ ()
 
@@ -19,7 +19,7 @@ author: Ueberphilosophy
 #### für note
 - Pfade: Alle
 - yaml Header
-  - cssclasses: note
+  - csclasses: note
   - date_created: current
   - publish: true
   - tags: []
@@ -31,7 +31,7 @@ author: Ueberphilosophy
 ##### PRIVAT
 - Pfade: Mitschriften 
 - yaml Header
-  - cssclasses: werkstatt
+  - csclasses: werkstatt
   - date_created: current
   - publish: false
   - tags: []
@@ -57,7 +57,7 @@ author: Ueberphilosophy
 #### für stutiismitschrift
 - Pfade: XXXstutiis/Mitschriften 
 - yaml Header
-  - cssclasses: studies
+  - csclasses: studies
   - date_created: 
   - publish: false
   - tags: []
@@ -70,7 +70,7 @@ author: Ueberphilosophy
 #### für stutiis
 - Pfade: XXXstutiis
 - yaml Header
-  - cssclasses: studies
+  - csclasses: studies
   - date_created: 
   - publish: false
   - tags: []
@@ -80,7 +80,7 @@ author: Ueberphilosophy
 #### für material
 - Pfade: Materialien
 - yaml Header
-  - cssclasses: material
+  - csclasses: material
   - date_created: current
   - publish: true
   - tags: []
@@ -92,7 +92,7 @@ author: Ueberphilosophy
 #### für autor
 - Pfade: Autoren
 - yaml Header
-  - cssclasses: autor
+  - csclasses: autor
   - date_created: current
   - publish: true
   - tags: Autornachname
@@ -106,7 +106,7 @@ author: Ueberphilosophy
 #### für diary
 - Pfade: Diary
 - yaml Header
-  - cssclasses: diary
+  - csclasses: diary
   - date_created: current
   - publish: false
   - tags: []
@@ -116,6 +116,17 @@ author: Ueberphilosophy
   - 2. Zeile: H2 leer
   - prevlink - nextlink
   - letzte Zeile: H2 -footnotes
+### cssclasses
+note, werkstatt, diary, timeline, autor, foldernote, catalog, material, timeline, studies
+
+Werkstatt/ hat diary, werkstatt und note
+
+XXXStudiis/ hat studiis
+
+Zusaetze/ hat note
+
+Material/ hat catalog, foldernote, timeline, autor, material
 
 &#9668;[[2025-12-19]]- [[2025-12-23]]&#9658;
+
 ## -footnotes
